welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:2: error: identifier expected but integer literal found.
move(nbPas: 1,versLAvant: Boolean) = {
            ^Program:8: error: ')' expected but '}' found.
}
^