welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
move(nbPas: 1,versLAvant: Boolean) = {
	if (versLAvant)
	{return nbPas}
}
